scss/_modal.scss
.modal-left {
  &__list {
    padding-left: 15px;
  }
}

.modal-right {

  &__block {
    padding: 13px;
    background: #303030;
  }

  &__list {
    color: #fff;
    list-style: none;
    padding-left: 0;
  }

  &__price {
    font-weight: bold;
    text-align: center;
    display: block;
    width: 200px;
    margin: 0 auto;
  }
}

.modal_z_index {
  z-index: 99999;
}

